docs(java): added javafx run edit configuration